--- a/about.html
+++ b/about.html
@@ -153,12 +153,12 @@
     <!--==================== FOOTER ====================-->
     <footer class="footer">
         <div class="footer-container container">
-            <button type="submit" class="pop-btn">
+            <a href="contact.html" class="pop-btn">
                 <span class="pop-icon pop-icon--footer">
                     <img src="/assets/img/reach-icon.png" />
                 </span>
                 <span class="pop-label">Reach out!</span>
-            </button>
+            </a>
 
             <div class="footer-content">
                 <div>
