--- a/portfolio.html
+++ b/portfolio.html
@@ -92,31 +92,31 @@
         <div class="portfolio-content">
           <div class="filterable-cards pic-container grid">
             <div class="card" data-name="games">
-              <img src="assets/img/about/pic-1.JPG" alt="">
+              <img src="assets/img/about/pic-1.JPG">
               <div class="card-body">
                 <h3 class="card-title">Game Art</h3>
               </div>
             </div>
             <div class="card" data-name="2d">
-              <img src="assets/img/about/pic-1.JPG" alt="">
+              <img src="assets/img/about/pic-1.JPG">
               <div class="card-body">
                 <h3 class="card-title">Game Art</h3>
               </div>
             </div>
             <div class="card" data-name="3d">
-              <img src="assets/img/about/pic-1.JPG" alt="">
+              <img src="assets/img/about/pic-1.JPG">
               <div class="card-body">
                 <h3 class="card-title">Game Art</h3>
               </div>
             </div>
             <div class="card" data-name="games">
-              <img src="assets/img/about/pic-1.JPG" alt="">
+              <img src="assets/img/about/pic-1.JPG">
               <div class="card-body">
                 <h3 class="card-title">Game Art</h3>
               </div>
             </div>
             <div class="card" data-name="2d">
-              <img src="assets/img/about/pic-1.JPG" alt="">
+              <img src="assets/img/about/pic-1.JPG">
               <div class="card-body">
                 <h3 class="card-title">Game Art</h3>
               </div>
