--- a/assets/work/EtherLocked.html
+++ b/assets/work/EtherLocked.html
@@ -57,81 +57,31 @@
     <!--==================== MAIN ====================-->
     <main class="main" id="top">
 
-        <!--==================== ABOUT ME ====================-->
+        <!--==================== TITLE + DESCRIPTION ====================-->
         <section class="work section">
-            <h2 class="section-title">
-                    <span>REACH OUT!</span>
+            <div class="intro container">
+                <div class="title-container">
+                    <h2 class="work-title">
+                    <span>EtherLocked</span>
                 </h2>
                 <a href="#" class="slide-btn">
-                        <img src="/assets/img/about/download-icon.png" />
-                        <span>PLAY IT</span>
-                    </a>
+                    <img src="/assets/img/about/download-icon.png" />
+                    <span>PLAY IT</span>
+                </a>
+                </div>
                 <p class="contact-description">
-                    Let’s make something together
+                    EtherLocked follows the story of a teenage boy who accidentally escapes his body one night. Before sunrise, the player must solve a series of puzzles to guide him back to his body.
                 </p>
             </div>
         </section>
-        <!-- Interests and professional traits -->
-        <div class="interests-container container grid">
-            <ul class="interests-list">
-                <h3 class="interests-title">
-                    My interests
-                </h3>
-                <li class="interests-item">
-                    <i class="ri-tree-line"></i>
-                    <p>
-                        Nature Lover: I'm more of a mountain person than a beach person. I love trying different sports,
-                        and bouldering is my go-to hobby. I’m always up for an adventure.
-                    </p>
-                </li>
-                <li class="interests-item">
-                    <i class="ri-camera-3-line"></i>
-                    <p>
-                        Photography: I occasionally take pictures, capturing moments and scenes that inspire me. It’s a
-                        great way for me to combine my love for exploration with creativity.
-                    </p>
-                </li>
-            </ul>
-            <ul class="interests-list">
-                <h3 class="interests-title">
-                    Professional Traits
-                </h3>
-                <li class="interests-item">
-                    <i class="ri-group-3-line"></i>
-                    <p>
-                        Team Player: Coming from a big family, I've learned the importance of teamwork and
-                        collaboration. I value constructive criticism and believe it’s essential for growth.
-                    </p>
-                </li>
-                <li class="interests-item">
-                    <i class="ri-user-line"></i>
-                    <p>
-                        Independent Worker: While I enjoy being part of a team, when it comes to working on different
-                        parts of a projects, I prefer my own space to focus and deliver my best work.
-                    </p>
-                </li>
-            </ul>
-        </div>
-        </section>
-
-
 
         <!--==================== PICTURES ====================-->
-        <section class="picture section">
+        <section class="picture">
             <div class="picture-gallery">
-                <h2 class="picture-title">
-                    Some pictures of me and the people I love:
-                </h2>
-                <div class="picture-container pic-container grid">
+                <div class="picture-container grid">
                     <img src="../img/about/pic-1.JPG" alt="image" class="picture-img">
                     <img src="../img/about/pic-2.JPG" alt="image" class="picture-img">
                     <img src="../img/about/pic-3.JPG" alt="image" class="picture-img">
-                    <img src="../img/about/pic-4.JPG" alt="image" class="picture-img">
-                    <img src="../img/about/pic-5.JPG" alt="image" class="picture-img">
-                    <img src="../img/about/pic-6.JPG" alt="image" class="picture-img">
-                    <img src="../img/about/pic-7.JPG" alt="image" class="picture-img">
-                    <img src="../img/about/pic-8.JPG" alt="image" class="picture-img">
-                    <img src="../img/about/pic-9.JPG" alt="image" class="picture-img">
                 </div>
             </div>
         </section>
