--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
                 <h2 class="picture-title">
                     Some pictures of me and the people I love:
                 </h2>
-                <div class="picture-container pic-container grid">
+                <div class="picture-container grid">
                     <img src="assets/img/about/pic-1.JPG" alt="image" class="picture-img">
                     <img src="assets/img/about/pic-2.JPG" alt="image" class="picture-img">
                     <img src="assets/img/about/pic-3.JPG" alt="image" class="picture-img">
