--- a/assets/work/EtherLocked.html
+++ b/assets/work/EtherLocked.html
@@ -33,7 +33,7 @@
                         <a href="portfolio.html" class="nav-link">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="about.html" class="nav-link active-link">About</a>
+                        <a href="about.html" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link">Contact</a>
@@ -62,15 +62,16 @@
             <div class="intro container">
                 <div class="title-container">
                     <h2 class="work-title">
-                    <span>EtherLocked</span>
-                </h2>
-                <a href="#" class="slide-btn">
-                    <img src="/assets/img/about/download-icon.png" />
-                    <span>PLAY IT</span>
-                </a>
+                        <span>EtherLocked</span>
+                    </h2>
+                    <a href="#" class="slide-btn">
+                        <img src="/assets/img/about/download-icon.png" />
+                        <span>PLAY IT</span>
+                    </a>
                 </div>
                 <p class="contact-description">
-                    EtherLocked follows the story of a teenage boy who accidentally escapes his body one night. Before sunrise, the player must solve a series of puzzles to guide him back to his body.
+                    EtherLocked follows the story of a teenage boy who accidentally escapes his body one night. Before
+                    sunrise, the player must solve a series of puzzles to guide him back to his body.
                 </p>
             </div>
         </section>
@@ -79,13 +80,64 @@
         <section class="picture">
             <div class="picture-gallery">
                 <div class="picture-container grid">
-                    <img src="../img/about/pic-1.JPG" alt="image" class="picture-img">
-                    <img src="../img/about/pic-2.JPG" alt="image" class="picture-img">
-                    <img src="../img/about/pic-3.JPG" alt="image" class="picture-img">
+                    <img src="../img/about/pic-1.JPG" alt="image" class="work-img">
+                    <img src="../img/about/pic-2.JPG" alt="image" class="work-img">
+                    <img src="../img/about/pic-3.JPG" alt="image" class="work-img">
                 </div>
             </div>
         </section>
+        <p class="contact-description">
+            Ether Locked is a first-person puzzle game that I developed together with two classmates over the course of
+            a year as a school project. Working in a small team of three gave us the chance to explore every stage of
+            development closely, from concept to final build, while each of us took on multiple roles.
+        </p>
+
+        <!--==================== CONTRIBUTIONS ====================-->
+        <section class="contributions section">
+            <div class="contributions-container container grid">
+                <h3 class="contributions-title">
+                    My contributions
+                </h3>
+                <ul class="contributions-list">
+                    <li class="contributions-item">
+                        <p>
+                            User Interface design
+                        </p>
+                    </li>
+                    <li class="contributions-item">
+                        <p>
+                            3D models and textures
+                        </p>
+                    </li>
+                    <li class="contributions-item">
+                        <p>
+                            Outdoor scenery (billboarding)
+                        </p>
+                    </li>
+                    <li class="contributions-item">
+                        <p>
+                            User Experience design
+                        </p>
+                    </li>
+                    <li class="contributions-item">
+                        <p>
+                            Modular environment kit
+                        </p>
+                    </li>
+                    <li class="contributions-item">
+                        <p>
+                            Main menu (UI, UX, programming)
+                        </p>
+                    </li>
+                </ul>
+
+            </div>
+        </section>
+
+
     </main>
+
+
     <!--==================== FOOTER ====================-->
     <footer class="footer">
         <div class="footer-container container">
