--- a/assets/work/EtherLocked.html
+++ b/assets/work/EtherLocked.html
@@ -2,132 +2,154 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!--=============== FAVICON ===============-->
-    <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
+  <!--=============== FAVICON ===============-->
+  <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon" />
 
-    <!--=============== REMIXICONS ===============-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css">
+  <!--=============== REMIXICONS ===============-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" />
 
-    <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="../css/styles.css">
+  <!--=============== CSS ===============-->
+  <link rel="stylesheet" href="../css/styles.css" />
 
-    <title>Forgach Rebeka - Portfolio</title>
+  <title>Forgach Rebeka - Portfolio</title>
 </head>
-
 <body>
-    <!--==================== HEADER ====================-->
-    <header class="header" id="header">
-        <nav class="nav container">
-            <a href="portfolio.html" class="nav-logo">
-                <span class="logo-drop">
-                    <img src="../img/Logo.png" />
-                </span>
-            </a>
-
-            <div class="nav-menu" id="nav-menu">
-                <ul class="nav-list">
-                    <li class="nav-item">
-                        <a href="portfolio.html" class="nav-link">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="about.html" class="nav-link active-link">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="contact.html" class="nav-link">Contact</a>
-                    </li>
-                </ul>
-
-                <!-- Close button -->
-                <div class="nav-close" id="nav-close">
-                    <i class="ri-close-line"></i>
-                </div>
-            </div>
-
-            <div class="nav-actions">
-                <div class="nav-toggle" id="nav-toggle">
-                    <i class="ri-menu-line"></i>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <!--==================== MAIN ====================-->
-    <main class="main" id="top">
-
-        <!--==================== TITLE + DESCRIPTION ====================-->
-        <section class="work section">
-            <div class="intro container">
-                <div class="title-container">
-                    <h2 class="work-title">
-                    <span>EtherLocked</span>
-                </h2>
-                <a href="#" class="slide-btn">
-                    <img src="/assets/img/about/download-icon.png" />
-                    <span>PLAY IT</span>
-                </a>
-                </div>
-                <p class="contact-description">
-                    EtherLocked follows the story of a teenage boy who accidentally escapes his body one night. Before sunrise, the player must solve a series of puzzles to guide him back to his body.
-                </p>
-            </div>
-        </section>
-
-        <!--==================== PICTURES ====================-->
-        <section class="picture">
-            <div class="picture-gallery">
-                <div class="picture-container grid">
-                    <img src="../img/about/pic-1.JPG" alt="image" class="picture-img">
-                    <img src="../img/about/pic-2.JPG" alt="image" class="picture-img">
-                    <img src="../img/about/pic-3.JPG" alt="image" class="picture-img">
-                </div>
-            </div>
-        </section>
-    </main>
-    <!--==================== FOOTER ====================-->
-    <footer class="footer">
-        <div class="footer-container container">
-            <a href="contact.html" class="pop-btn">
-                <span class="pop-icon pop-icon--footer">
-                    <img src="../img/reach-icon.png" />
-                </span>
-                <span class="pop-label">Reach out!</span>
-            </a>
-
-            <div class="footer-content">
-                <div>
-                    <div class="footer-social">
-                        <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"
-                            class="footer-social-link" aria-label="Facebook">
-                            <i class="ri-facebook-circle-fill"></i>
-                        </a>
-                        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"
-                            class="footer-social-link" aria-label="Instagram">
-                            <i class="ri-instagram-fill"></i>
-                        </a>
-                        <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer"
-                            class="footer-social-link" aria-label="Twitter/X">
-                            <i class="ri-twitter-fill"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <span class="footer-copy">
-            &#169; All Rights Reserved By Forgach Rebeka
+  <!--========== HEADER ==========-->
+  <header class="header" id="header">
+    <nav class="nav container">
+      <a href="portfolio.html" class="nav-logo">
+        <span class="logo-drop">
+          <img src="../img/logo.png" />
         </span>
-    </footer>
+      </a>
 
-    <!--========== SCROLL UP ==========-->
-    <a href="#top" class="scrollup" id="scroll-up">
-        <i class="ri-arrow-up-line"></i>
-    </a>
+      <div class="nav-menu" id="nav-menu">
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="portfolio.html" class="nav-link">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a href="about.html" class="nav-link">About</a>
+          </li>
+          <li class="nav-item">
+            <a href="contact.html" class="nav-link">Contact</a>
+          </li>
+        </ul>
 
-    <!--=============== MAIN JS ===============-->
-    <script src="../js/main.js"></script>
+        <!-- Close button -->
+        <div class="nav-close" id="nav-close">
+          <i class="ri-close-line"></i>
+        </div>
+      </div>
+
+      <div class="nav-actions">
+        <div class="nav-toggle" id="nav-toggle">
+          <i class="ri-menu-line"></i>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <!--========== MAIN ==========-->
+  <main class="main" id="top">
+
+    <!--========== PROJECT SECTION ==========-->
+    <section class="work" style="--bg-image: url('../img/Background.png')">
+      <div class="intro container">
+        <div class="title-container">
+          <h2 class="work-title"><span>EtherLocked</span></h2>
+          <a href="#" class="slide-btn">
+            <img src="../img/about/download-icon.png" />
+            <span>Play it!</span>
+          </a>
+        </div>
+        <p class="contact-description">
+          EtherLocked follows the story of a teenage boy who accidentally escapes his body one night. Before sunrise, the player must solve a series of puzzles to guide him back to his body.
+        </p>
+      </div>
+    </section>
+      <!--========== IMAGE GALLERY ==========-->
+    <section class="picture">
+    <div class="picture-gallery">
+        <div class="picture-container grid">
+          <img src="../img/about/pic-1.JPG" alt="Screenshot 1" class="picture-img" />
+          <img src="../img/about/pic-2.JPG" alt="Screenshot 2" class="picture-img" />
+          <img src="../img/about/pic-3.JPG" alt="Screenshot 3" class="picture-img" />
+        </div>
+      </div>
+    </section>  
+
+
+      <!--========== CONTRIBUTIONS ==========-->
+      <div class="container contributions">
+        <h3 class="section-subtitle">My Contributions</h3>
+        <ul class="contribution-list">
+          <li>User Interface Design</li>
+          <li>User Experience Design</li>
+          <li>3D Models & Textures</li>
+          <li>Modular Environment Kit</li>
+          <li>Outdoor Scenery (Billboarding)</li>
+          <li>Main Menu (UI, UX, Programming)</li>
+        </ul>
+      </div>
+
+      <!--========== TOOLS USED ==========-->
+      <div class="container tools">
+        <h3 class="section-subtitle">Tools Used</h3>
+        <div class="tool-icons">
+          <img src="../work/EtherLocked-img/unity.png" alt="Unity" />
+          <img src="../work/EtherLocked-img/substance.png" alt="Substance Painter" />
+          <img src="../work/EtherLocked-img/zbrush.png" alt="ZBrush" />
+          <img src="../work/EtherLocked-img/illustrator.png" alt="Illustrator" />
+          <img src="../work/EtherLocked-img/blender.png" alt="Blender" />
+          <img src="../work/EtherLocked-img/procreate.png" alt="Procreate" />
+        </div>
+    </div>
+  </main>
+
+  <!--==================== FOOTER ====================-->
+  <footer class="footer">
+    <div class="footer-container container">
+      <a href="contact.html" class="pop-btn">
+        <span class="pop-icon pop-icon--footer">
+          <img src="/assets/img/reach-icon.png" />
+        </span>
+        <span class="pop-label">Reach out!</span>
+      </a>
+
+      <div class="footer-content">
+        <div>
+          <div class="footer-social">
+            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" class="footer-social-link"
+              aria-label="Facebook">
+              <i class="ri-facebook-circle-fill"></i>
+            </a>
+            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" class="footer-social-link"
+              aria-label="Instagram">
+              <i class="ri-instagram-fill"></i>
+            </a>
+            <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" class="footer-social-link"
+              aria-label="Twitter/X">
+              <i class="ri-twitter-fill"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <span class="footer-copy">
+      &#169; All Rights Reserved By Forgach Rebeka
+    </span>
+  </footer>
+  <!--========== SCROLL UP ==========-->
+  <a href="#top" class="scrollup" id="scroll-up" aria-label="Scroll to top">
+    <i class="ri-arrow-up-line"></i>
+  </a>
+
+  <!--=============== MAIN JS ===============-->
+  <script src="assets/js/main.js"></script>
 </body>
-
 </html>
