--- a/portfolio.html
+++ b/portfolio.html
@@ -91,12 +91,12 @@
 
         <div class="portfolio-content">
           <div class="filterable-cards pic-container grid">
-            <div class="card" data-name="games">
-              <img src="assets/img/about/pic-1.JPG">
+            <a  href="./assets/work/EtherLocked.html" class="card" data-name="games">
+              <img src="assets/img/portfolio/etherlocked.png">
               <div class="card-body">
-                <h3 class="card-title">Game Art</h3>
+                <h3 class="card-title">EtherLocked</h3>
               </div>
-            </div>
+            </a>
             <div class="card" data-name="2d">
               <img src="assets/img/about/pic-1.JPG">
               <div class="card-body">
