--- a/about.html
+++ b/about.html
@@ -137,21 +137,24 @@
                     Some pictures of me and the people I love:
                 </h2>
                 <div class="picture-container grid">
-                    <img src="assets/img/about/pic-1.JPG" alt="image" class="picture-img">
-                    <img src="assets/img/about/pic-2.JPG" alt="image" class="picture-img">
-                    <img src="assets/img/about/pic-3.JPG" alt="image" class="picture-img">
-                    <img src="assets/img/about/pic-4.JPG" alt="image" class="picture-img">
-                    <img src="assets/img/about/pic-5.JPG" alt="image" class="picture-img">
-                    <img src="assets/img/about/pic-6.JPG" alt="image" class="picture-img">
-                    <img src="assets/img/about/pic-7.JPG" alt="image" class="picture-img">
-                    <img src="assets/img/about/pic-8.JPG" alt="image" class="picture-img">
-                    <img src="assets/img/about/pic-9.JPG" alt="image" class="picture-img">
+                    <img src="assets/img/about/pic-1.png" alt="image" class="picture-img">
+                    <img src="assets/img/about/pic-2.png" alt="image" class="picture-img">
+                    <img src="assets/img/about/pic-3.png" alt="image" class="picture-img">
+                    <img src="assets/img/about/pic-4.png" alt="image" class="picture-img">
+                    <img src="assets/img/about/pic-5.png" alt="image" class="picture-img">
+                    <img src="assets/img/about/pic-6.png" alt="image" class="picture-img">
+                    <img src="assets/img/about/pic-7.png" alt="image" class="picture-img">
+                    <img src="assets/img/about/pic-8.png" alt="image" class="picture-img">
+                    <img src="assets/img/about/pic-9.png" alt="image" class="picture-img">
+                    <img src="assets/img/about/pic-10.png" alt="image" class="picture-img">
+                    <img src="assets/img/about/pic-11.png" alt="image" class="picture-img">
+                    <img src="assets/img/about/pic-12.png" alt="image" class="picture-img">
                 </div>
             </div>
         </section>
     </main>
     <!--==================== FOOTER ====================-->
-    <footer class="footer">
+    <footer class="footer" style="--ft-image: url('../img/Background.png')">
         <div class="footer-container container">
             <a href="contact.html" class="pop-btn">
                 <span class="pop-icon pop-icon--footer">
