--- a/assets/work/EtherLocked.html
+++ b/assets/work/EtherLocked.html
@@ -16,11 +16,12 @@
 
   <title>Forgach Rebeka - Portfolio</title>
 </head>
+
 <body>
   <!--========== HEADER ==========-->
   <header class="header" id="header">
     <nav class="nav container">
-      <a href="portfolio.html" class="nav-logo">
+      <a href="../portfolio.html" class="nav-logo">
         <span class="logo-drop">
           <img src="../img/logo.png" />
         </span>
@@ -29,13 +30,13 @@
       <div class="nav-menu" id="nav-menu">
         <ul class="nav-list">
           <li class="nav-item">
-            <a href="portfolio.html" class="nav-link">Portfolio</a>
+            <a href="../portfolio.html" class="nav-link">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a href="about.html" class="nav-link">About</a>
+            <a href="../about.html" class="nav-link">About</a>
           </li>
           <li class="nav-item">
-            <a href="contact.html" class="nav-link">Contact</a>
+            <a href="../contact.html" class="nav-link">Contact</a>
           </li>
         </ul>
 
@@ -57,7 +58,7 @@
   <main class="main" id="top">
 
     <!--========== PROJECT SECTION ==========-->
-    <section class="work" style="--bg-image: url('../img/Background.png')">
+    <section class="work" style="--bg-image: url('../work/EtherLocked-img/EtherLocked-bg.png')">
       <div class="intro container">
         <div class="title-container">
           <h2 class="work-title"><span>EtherLocked</span></h2>
@@ -67,51 +68,52 @@
           </a>
         </div>
         <p class="contact-description">
-          EtherLocked follows the story of a teenage boy who accidentally escapes his body one night. Before sunrise, the player must solve a series of puzzles to guide him back to his body.
+          EtherLocked follows the story of a teenage boy who accidentally escapes his body one night. Before sunrise,
+          the player must solve a series of puzzles to guide him back to his body.
         </p>
       </div>
     </section>
-      <!--========== IMAGE GALLERY ==========-->
+    <!--========== IMAGE GALLERY ==========-->
     <section class="picture">
-    <div class="picture-gallery">
+      <div class="picture-gallery">
         <div class="picture-container grid">
           <img src="../img/about/pic-1.JPG" alt="Screenshot 1" class="picture-img" />
           <img src="../img/about/pic-2.JPG" alt="Screenshot 2" class="picture-img" />
           <img src="../img/about/pic-3.JPG" alt="Screenshot 3" class="picture-img" />
         </div>
       </div>
-    </section>  
+    </section>
 
 
-      <!--========== CONTRIBUTIONS ==========-->
-      <div class="container contributions">
-        <h3 class="section-subtitle">My Contributions</h3>
-        <ul class="contribution-list">
-          <li>User Interface Design</li>
-          <li>User Experience Design</li>
-          <li>3D Models & Textures</li>
-          <li>Modular Environment Kit</li>
-          <li>Outdoor Scenery (Billboarding)</li>
-          <li>Main Menu (UI, UX, Programming)</li>
-        </ul>
+    <!--========== CONTRIBUTIONS ==========-->
+    <div class="container contributions">
+      <h3 class="section-subtitle">My Contributions</h3>
+      <ul class="contribution-list">
+        <li>User Interface Design</li>
+        <li>User Experience Design</li>
+        <li>3D Models & Textures</li>
+        <li>Modular Environment Kit</li>
+        <li>Outdoor Scenery (Billboarding)</li>
+        <li>Main Menu (UI, UX, Programming)</li>
+      </ul>
+    </div>
+
+    <!--========== TOOLS USED ==========-->
+    <div class="container tools">
+      <h3 class="section-subtitle">Tools Used</h3>
+      <div class="tool-icons">
+        <img src="../work/EtherLocked-img/unity.png" alt="Unity" />
+        <img src="../work/EtherLocked-img/substance.png" alt="Substance Painter" />
+        <img src="../work/EtherLocked-img/zbrush.png" alt="ZBrush" />
+        <img src="../work/EtherLocked-img/illustrator.png" alt="Illustrator" />
+        <img src="../work/EtherLocked-img/blender.png" alt="Blender" />
+        <img src="../work/EtherLocked-img/procreate.png" alt="Procreate" />
       </div>
-
-      <!--========== TOOLS USED ==========-->
-      <div class="container tools">
-        <h3 class="section-subtitle">Tools Used</h3>
-        <div class="tool-icons">
-          <img src="../work/EtherLocked-img/unity.png" alt="Unity" />
-          <img src="../work/EtherLocked-img/substance.png" alt="Substance Painter" />
-          <img src="../work/EtherLocked-img/zbrush.png" alt="ZBrush" />
-          <img src="../work/EtherLocked-img/illustrator.png" alt="Illustrator" />
-          <img src="../work/EtherLocked-img/blender.png" alt="Blender" />
-          <img src="../work/EtherLocked-img/procreate.png" alt="Procreate" />
-        </div>
     </div>
   </main>
 
   <!--==================== FOOTER ====================-->
-  <footer class="footer">
+  <footer class="footer" style="--ft-image: url('../work/EtherLocked-img/EtherLocked-bg.png')">
     <div class="footer-container container">
       <a href="contact.html" class="pop-btn">
         <span class="pop-icon pop-icon--footer">
@@ -152,4 +154,5 @@
   <!--=============== MAIN JS ===============-->
   <script src="assets/js/main.js"></script>
 </body>
+
 </html>
