--- a/portfolio.html
+++ b/portfolio.html
@@ -32,13 +32,13 @@
       <div class="nav-menu" id="nav-menu">
         <ul class="nav-list">
           <li class="nav-item">
-            <a href="portfolio.html" class="nav-link active-link">Portfolio</a>
+            <a href="./portfolio.html" class="nav-link active-link">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a href="about.html" class="nav-link">About</a>
+            <a href="./about.html" class="nav-link">About</a>
           </li>
           <li class="nav-item">
-            <a href="contact.html" class="nav-link">Contact</a>
+            <a href="./contact.html" class="nav-link">Contact</a>
           </li>
         </ul>
 
@@ -90,8 +90,8 @@
         <!--work cards-->
 
         <div class="portfolio-content">
-          <div class="filterable-cards pic-container grid">
-            <a  href="./assets/work/EtherLocked.html" class="card" data-name="games">
+          <div class="filterable-cards grid">
+            <a href="./assets/work/EtherLocked.html" class="card" data-name="games">
               <img src="assets/img/portfolio/etherlocked.png">
               <div class="card-body">
                 <h3 class="card-title">EtherLocked</h3>
