--- a/portfolio.html
+++ b/portfolio.html
@@ -128,7 +128,7 @@
 
 
   <!--==================== FOOTER ====================-->
-  <footer class="footer">
+  <footer class="footer" style="--ft-image: url('../img/Background.png')">
     <div class="footer-container container">
       <a href="contact.html" class="pop-btn">
         <span class="pop-icon pop-icon--footer">
