--- a/about.html
+++ b/about.html
@@ -72,14 +72,17 @@
                 </div>
                 <ul class="about-text">
                     <h3 class="about-title">
-                        Hi, I'm Rebeka!
+                        Nice to meet you!
                     </h3>
                     <li class="about-item">
                         <p>
-                            I'm outgoing and not afraid to strike up a conversation with new people. Building
-                            connections and learning from others is something I genuinely enjoy. My curiosity and drive
-                            to learn new things keep me constantly seeking out new challenges and opportunities to grow
-                            both personally and professionally.
+                            I'm <span>outgoing</span> and not afraid to strike up a conversation with <span>new
+                                people</span>. Building
+                            <span>connections</span> and <span>learning from others</span> is something I genuinely
+                            enjoy. My curiosity and drive
+                            to learn new things keep me constantly seeking out <span>new challenges</span> and
+                            <span>opportunities to grow</span>
+                            both <span>personally</span> and <span>professionally</span>.
                         </p>
                     </li>
                 </ul>
@@ -94,15 +97,19 @@
                 <li class="interests-item">
                     <i class="ri-tree-line"></i>
                     <p>
-                        Nature Lover: I'm more of a mountain person than a beach person. I love trying different sports,
-                        and bouldering is my go-to hobby. I’m always up for an adventure.
+                        <span class="accent">Nature Lover:</span> I'm more of a <span>mountain person</span> than a
+                        beach person. I love trying
+                        different sports,
+                        and <span>bouldering</span> is my <span>go-to hobby</span>. I’m always up for an adventure.
                     </p>
                 </li>
                 <li class="interests-item">
                     <i class="ri-camera-3-line"></i>
                     <p>
-                        Photography: I occasionally take pictures, capturing moments and scenes that inspire me. It’s a
-                        great way for me to combine my love for exploration with creativity.
+                        <span class="accent">Photography:</span> I occasionally <span>take pictures</span>, capturing
+                        moments and scenes that
+                        inspire me. It’s a
+                        great way for me to combine my love for <span>exploration</span> with <span>creativity</span>.
                     </p>
                 </li>
             </ul>
@@ -113,20 +120,24 @@
                 <li class="interests-item">
                     <i class="ri-group-3-line"></i>
                     <p>
-                        Team Player: Coming from a big family, I've learned the importance of teamwork and
-                        collaboration. I value constructive criticism and believe it’s essential for growth.
+                        <span class="accent">Team Player:</span> Coming from a <span>big family</span>, I've learned the
+                        importance of
+                        <span>teamwork</span> and
+                        <span>collaboration</span>. I value <span>constructive criticism</span> and believe it’s
+                        essential for growth.
                     </p>
                 </li>
                 <li class="interests-item">
                     <i class="ri-user-line"></i>
                     <p>
-                        Independent Worker: While I enjoy being part of a team, when it comes to working on different
-                        parts of a projects, I prefer my own space to focus and deliver my best work.
+                        <span class="accent">Independent Worker:</span> While I enjoy being part of a <span>team</span>,
+                        when it comes to working on
+                        different
+                        parts of a projects, I prefer my <span>own space</span> to focus and deliver my best work.
                     </p>
                 </li>
             </ul>
         </div>
-        </section>
 
 
 
