--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
         <!--work cards-->
 
         <div class="portfolio-content">
-          <div class="filterable-cards grid">
+          <div class="filterable-cards picture-container grid">
             <a href="./assets/work/EtherLocked.html" class="card" data-name="games">
               <img src="assets/img/portfolio/etherlocked.png">
               <div class="card-body">
