--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
                     My interests
                 </h3>
                 <li class="interests-item">
-                    <i class="ri-tree-line"></i>
+                    <img src="/assets/img/about/nature-icon.png" />
                     <p>
                         <span class="accent">Nature Lover:</span> I'm more of a <span>mountain person</span> than a
                         beach person. I love trying
@@ -104,7 +104,7 @@
                     </p>
                 </li>
                 <li class="interests-item">
-                    <i class="ri-camera-3-line"></i>
+                    <img src="/assets/img/about/photo-icon.png" />
                     <p>
                         <span class="accent">Photography:</span> I occasionally <span>take pictures</span>, capturing
                         moments and scenes that
@@ -118,7 +118,7 @@
                     Professional Traits
                 </h3>
                 <li class="interests-item">
-                    <i class="ri-group-3-line"></i>
+                    <img src="/assets/img/about/team-icon.png" />
                     <p>
                         <span class="accent">Team Player:</span> Coming from a <span>big family</span>, I've learned the
                         importance of
@@ -128,7 +128,7 @@
                     </p>
                 </li>
                 <li class="interests-item">
-                    <i class="ri-user-line"></i>
+                    <img src="/assets/img/about/individual-icon.png" />
                     <p>
                         <span class="accent">Independent Worker:</span> While I enjoy being part of a <span>team</span>,
                         when it comes to working on
@@ -177,18 +177,14 @@
             <div class="footer-content">
                 <div>
                     <div class="footer-social">
-                        <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"
-                            class="footer-social-link" aria-label="Facebook">
-                            <i class="ri-facebook-circle-fill"></i>
-                        </a>
-                        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"
-                            class="footer-social-link" aria-label="Instagram">
-                            <i class="ri-instagram-fill"></i>
-                        </a>
-                        <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer"
-                            class="footer-social-link" aria-label="Twitter/X">
-                            <i class="ri-twitter-fill"></i>
-                        </a>
+                        <a href="https://www.instagram.com/rebibab_the_great/" class="footer-social-link icon-instagram"
+                            aria-label="Instagram"></a>
+
+                        <a href="https://www.facebook.com/FRWombat" class="footer-social-link icon-facebook"
+                            aria-label="Facebook"></a>
+
+                        <a href="https://www.linkedin.com/in/rebeka-forgach/" class="footer-social-link icon-linkedin"
+                            aria-label="Linkedin"></a>
                     </div>
                 </div>
             </div>
