--- a/portfolio.html
+++ b/portfolio.html
@@ -140,18 +140,14 @@
       <div class="footer-content">
         <div>
           <div class="footer-social">
-            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" class="footer-social-link"
-              aria-label="Facebook">
-              <i class="ri-facebook-circle-fill"></i>
-            </a>
-            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" class="footer-social-link"
-              aria-label="Instagram">
-              <i class="ri-instagram-fill"></i>
-            </a>
-            <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" class="footer-social-link"
-              aria-label="Twitter/X">
-              <i class="ri-twitter-fill"></i>
-            </a>
+            <a href="https://www.instagram.com/rebibab_the_great/" class="footer-social-link icon-instagram"
+              aria-label="Instagram"></a>
+
+            <a href="https://www.facebook.com/FRWombat" class="footer-social-link icon-facebook"
+              aria-label="Facebook"></a>
+
+            <a href="https://www.linkedin.com/in/rebeka-forgach/" class="footer-social-link icon-linkedin"
+              aria-label="Linkedin"></a>
           </div>
         </div>
       </div>
