--- a/contact.html
+++ b/contact.html
@@ -70,26 +70,31 @@
 
 
             <div class="contact-container container">
-                <form action="#" class="contact-form">
+                <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
+                    <input type="hidden" name="access_key" value="a2acbdec-7657-4ee3-bab1-7101466e6a35">
                     <!-- Name -->
                     <div class="field">
-                        <input class="form-input" type="text" id="name" name="name" placeholder=" " required>
+                        <input class="form-input" type="text" id="name" name="name" placeholder=" " autocomplete="off">
                         <label for="name">Name</label>
+                        <div class="error-txt">Name can't be blank</div>
                     </div>
 
                     <!-- Email -->
                     <div class="field">
-                        <input class="form-input" type="email" id="email" name="email" placeholder=" " required>
+                        <input class="form-input" type="email" id="email" name="email" placeholder=" "
+                            autocomplete="off">
                         <label for="email">Email address</label>
+                        <div class="error-txt">Email address can't be blank</div>
                     </div>
 
                     <!-- Message -->
                     <div class="field field--textarea">
-                        <textarea class="form-input" id="message" name="message" rows="6" placeholder=" "></textarea>
+                        <textarea class="form-input" id="message" name="message" rows="6" placeholder=" "
+                            autocomplete="off"></textarea>
                         <label for="message">Message</label>
+                        <div class="error-txt">Message can't be blank</div>
                     </div>
-
-                    <!-- Submit (centered) -->
+                    <!-- Submit -->
                     <button type="submit" class="pop-btn">
                         <span class="pop-icon" aria-hidden="true">
                             <img src="/assets/img/contact/send-icon.png" />
