--- a/assets/work/EtherLocked.html
+++ b/assets/work/EtherLocked.html
@@ -67,9 +67,10 @@
             <span>Play it!</span>
           </a>
         </div>
-        <p class="contact-description">
-          EtherLocked follows the story of a teenage boy who accidentally escapes his body one night. Before sunrise,
-          the player must solve a series of puzzles to guide him back to his body.
+        <p class="work-description">
+          EtherLocked follows the story of a <span>teenage boy</span> who accidentally <span>escapes his body</span> one
+          night. <span>Before sunrise</span>,
+          the player must solve a series of <span>puzzles</span> to guide him back to his body.
         </p>
       </div>
     </section>
@@ -77,9 +78,9 @@
     <section class="picture">
       <div class="picture-gallery">
         <div class="picture-container grid">
-          <img src="../img/about/pic-1.JPG" alt="Screenshot 1" class="picture-img" />
-          <img src="../img/about/pic-2.JPG" alt="Screenshot 2" class="picture-img" />
-          <img src="../img/about/pic-3.JPG" alt="Screenshot 3" class="picture-img" />
+          <img src="../work/EtherLocked-img/EtherLocked-bg.png" alt="Screenshot 1" class="picture-img" />
+          <img src="../work/EtherLocked-img/EtherLocked-bg.png" alt="Screenshot 2" class="picture-img" />
+          <img src="../work/EtherLocked-img/EtherLocked-bg.png" alt="Screenshot 3" class="picture-img" />
         </div>
       </div>
     </section>
@@ -87,6 +88,14 @@
 
     <!--========== CONTRIBUTIONS ==========-->
     <div class="container contributions">
+      <p class="work-description">
+        EtherLocked is a <span>first-person puzzle</span> game that I developed together <span>with two
+          classmates</span> over the course of a
+        <span>year</span> as a <span>school project</span>. Working in a small team of three gave us the chance to
+        explore <span>every stage</span> of
+        <span>development</span> closely, from <span>concept to final build</span>, while each of us took on
+        <span>multiple roles</span>.
+      </p>
       <h3 class="section-subtitle">My Contributions</h3>
       <ul class="contribution-list">
         <li>User Interface Design</li>
@@ -97,6 +106,20 @@
         <li>Main Menu (UI, UX, Programming)</li>
       </ul>
     </div>
+
+    <!--========== IMAGE GALLERY ==========-->
+    <section class="picture">
+      <div class="picture-gallery">
+        <div class="picture-container grid">
+          <img src="../work/EtherLocked-img/EtherLocked-bg.png" alt="Screenshot 1" class="picture-img" />
+          <img src="../work/EtherLocked-img/EtherLocked-bg.png" alt="Screenshot 2" class="picture-img" />
+          <img src="../work/EtherLocked-img/EtherLocked-bg.png" alt="Screenshot 3" class="picture-img" />
+          <img src="../work/EtherLocked-img/EtherLocked-bg.png" alt="Screenshot 1" class="picture-img" />
+          <img src="../work/EtherLocked-img/EtherLocked-bg.png" alt="Screenshot 2" class="picture-img" />
+          <img src="../work/EtherLocked-img/EtherLocked-bg.png" alt="Screenshot 3" class="picture-img" />
+        </div>
+      </div>
+    </section>
 
     <!--========== TOOLS USED ==========-->
     <div class="container tools">
@@ -125,18 +148,14 @@
       <div class="footer-content">
         <div>
           <div class="footer-social">
-            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" class="footer-social-link"
-              aria-label="Facebook">
-              <i class="ri-facebook-circle-fill"></i>
-            </a>
-            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" class="footer-social-link"
-              aria-label="Instagram">
-              <i class="ri-instagram-fill"></i>
-            </a>
-            <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" class="footer-social-link"
-              aria-label="Twitter/X">
-              <i class="ri-twitter-fill"></i>
-            </a>
+            <a href="https://www.instagram.com/rebibab_the_great/" class="footer-social-link icon-instagram"
+              aria-label="Instagram"></a>
+
+            <a href="https://www.facebook.com/FRWombat" class="footer-social-link icon-facebook"
+              aria-label="Facebook"></a>
+
+            <a href="https://www.linkedin.com/in/rebeka-forgach/" class="footer-social-link icon-linkedin"
+              aria-label="Linkedin"></a>
           </div>
         </div>
       </div>
