--- a/contact.html
+++ b/contact.html
@@ -70,8 +70,7 @@
 
 
             <div class="contact-container container">
-                <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
-                    <input type="hidden" name="access_key" value="a2acbdec-7657-4ee3-bab1-7101466e6a35">
+                <form action="" class="contact-form">
                     <!-- Name -->
                     <div class="field">
                         <input class="form-input" type="text" id="name" name="name" placeholder=" " autocomplete="off">
@@ -113,6 +112,7 @@
 
     <!--=============== MAIN JS ===============-->
     <script src="assets/js/main.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 </body>
 
 </html>
